Ajout du support des thèmes dans VigiBoard. Le thème choisi par l'utilisateur est enregistré dans sa session (cf. contrôleur root.py dans Vigiboard & commit précédent). A terme, on pourrait peut-être stocker cette information dans la classe User du modèle.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1665 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/vigiboard_style.css
+++ b/src/vigilo/themes/public/vigiboard/css/vigiboard_style.css
@@ -144,14 +144,9 @@ div.clearingdiv {
 clear:both;
 }
 
-.refresh_select {
+.toolbar_select {
 	background-color: #DBEAF5;
 	border: 1px solid #4682B4;
-}
-
-.refresh_button {
-	background-color: red;
-	color: white
 }
 
 #DetailsDialog_initial_state,
