--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!--! @TODO Expliquer comment déclarer de nouveaux thèmes/styles. -->
+<!--!
+    Les "thèmes" fonctionnent ainsi :
+    -   une variable "themes" est créé avec py:with au niveau de la balise "html",
+        elle contient la définition des différents thèmes disponibles. Chaque
+        définition contient :
+        *   un libellé, qui sera visible par l'utilisateur (donc traductible)
+        *   un identifiant, utilisé en interne pour sauvegarder le choix de
+            l'utilisateur.
+        *   un tuple contenant les emplacements des différents fichiers CSS qui
+            composent le thème. Inutile d'utiliser tg.url() sur ces emplacements,
+            ceci sera fait automatiquement.
+
+    -   une variable "session_theme" est créé qui contient l'identifiant du thème
+        éventuellement choisi par l'utilisateur (ou None si aucun thème n'a été
+        choisi pour le moment).
+        ATTENTION : bien que ce soit improbable, il se pourrait que l'identifiant
+        indiqué ne soit plus valide (ex : le thème a changé d'identifiant).
+
+    -   le thème réellement utilisé est celui indiqué dans "session_theme" si
+        l'identifiant est valide, sinon il s'agira du premier thème défini dans
+        la variable "themes".
+
+    TODO: Il faudrait pouvoir définir les thèmes ailleurs.
+-->
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:xi="http://www.w3.org/2001/XInclude"
     xmlns:py="http://genshi.edgewall.org/"
-    py:with="themes = ((l_('Night'), 'night', ('/css/night.css', )), (l_('Blind'), 'blind', ('/css/blind.css', ))); session_theme = session.get('theme'); active_theme = list(reversed([theme_data[1] for (theme_index, theme_data) in enumerate(themes) if theme_data[1] == session_theme or theme_index == 0]))[0]"
+    py:with="themes = ((l_('Classical'), 'classical', ('/css/classical.css', )), (l_('Night'), 'night', ('/css/night.css', )), (l_('Blind'), 'blind', ('/css/blind.css', ))); session_theme = session.get('theme'); active_theme = list(reversed([theme_data[1] for (theme_index, theme_data) in enumerate(themes) if theme_data[1] == session_theme or theme_index == 0]))[0]"
 >
 
     <xi:include href="vigiboard_event_table.html" />
