--- a/src/vigilo/themes/public/vigiboard/css/vigiboard_style.css
+++ b/src/vigilo/themes/public/vigiboard/css/vigiboard_style.css
@@ -4,18 +4,36 @@ body {
         margin: auto;
         padding: 0;
         font-size: 10px;
-        font-family:"Lucida Grande","Lucida Sans Unicode",geneva,verdana,sans-serif;
+        font-family:"Lucida Grande", "Lucida Sans Unicode", geneva, verdana, sans-serif;
 }
 
-.table_top {
-	border: solid 0px black;
+.toolbar {
 	width: 100%;
 	background-color: #F0F1F5;
-	border-collapse:collapse;
 	margin-bottom: 10px;
-}
-.table_top tr td {
 	padding: 4px;
+}
+
+.toolbar #logo img{
+    width:58px;
+}
+
+.toolbar_item {
+    margin-left: 30px; 
+    float: right
+}
+
+.toolbar_item#search_mode_tip {
+    margin-top: 7px;
+}
+
+.toolbar_item#search_mode_tip a {
+    color:rgb(70, 130, 180);
+    text-decoration: underline;
+}
+
+.toolbar_item#font_size_selector {
+    margin-top: 5px;
 }
 
 .history_table {
@@ -26,7 +44,6 @@ body {
 	background-color:#F8F8F8;
 	font-weight:bold;
 }
-
 
 .vigitable {
 	width: 100%;
@@ -48,6 +65,30 @@ body {
 	border: solid 1px #EBECF0;
 }
 
+.vigitable thead #previous_page {
+    width:26px;
+    border-right: solid 1px #4682b4;
+}
+
+.vigitable thead #pagination {
+    color: white;
+    background-color: #4682b4
+}
+
+.vigitable thead #next_page {
+    width:26px;
+    border-left: solid 1px #4682b4;
+}
+
+.vigitable th {
+    padding: 5px
+}
+
+.vigitable th.small_col {
+    width: 26px; 
+    padding: 0px;
+}
+
 .vigitable tbody tr {
 	border: solid 1px white;
         empty-cells: show;
@@ -57,6 +98,20 @@ body {
 	border: solid 1px white;
         padding: 3px 10px;
         empty-cells: show;
+}
+
+.vigitable td.id_col {
+    padding: 3px;
+}
+
+.vigitable td.id_col img{
+    width: 20px;
+}
+
+.vigitable td.ticket_col,
+.vigitable td.correvent_acknowledgement,
+.last_cols {
+    text-align: center;
 }
 
 .vigitable .fleche_detail {
@@ -71,7 +126,9 @@ tr.even {
 	background-color: #F0F0F0;
 }
 
-td.OK {
+td.OK,
+td.UP
+ {
     background-color: #73DE78;
 }
 
@@ -79,7 +136,9 @@ td.WARNING {
 	background-color: #FFFF00;
 }
 
-td.CRITICAL {
+td.CRITICAL,
+td.DOWN
+{
 	background-color: #FF0000;
 }
 
@@ -88,11 +147,13 @@ td.WARNING_Ack {
 
 }
 
-td.CRITICAL_Ack {
+td.CRITICAL_Ack,
+td.DOWN_Ack {
 	background-color: #FC9090;
 }
 
-td.OK_Ack {
+td.OK_Ack,
+td.UP_Ack {
 	background-color: #A9EBAC;
 }
 
@@ -109,30 +170,32 @@ img {
 #flash {
 	opacity: 0;
 }
+
 #flash, .notice {
-font-size:120%;
-font-weight:bolder;
-margin:0pt auto 0.5em;
-margin-left: 26px;
-width:400px;
-position: absolute;
+    font-size:120%;
+    font-weight:bolder;
+    bottom: 0px;
+    right: 0px;
+    width:100%;
+    position: absolute;
 }
 #flash div, .notice {
-padding:8px 7px 6px 40px;
+    padding:8px 7px 6px 44px;
 }
 #flash .ok {
-background:#d8ecd8 url(../images/ok.png) no-repeat scroll 0px center;
+    background:#d8ecd8 url(../images/ok.png) no-repeat scroll 0px center;
 }
 #flash .warning {
-background:#fff483 url(../images/warning.png) no-repeat scroll 0px center;
+    background:#fff483 url(../images/warning.png) no-repeat scroll 0px center;
 }
 #flash .error {
-background:#f9c5c1 url(../images/error.png) no-repeat scroll 0px center;
+    background:#f9c5c1 url(../images/error.png) no-repeat scroll 0px center;
 }
 #flash .alert,
 #flash .info {
-background:#EEEEFF url(../images/info.png) no-repeat scroll 0px center;
+    background:#EEEEFF url(../images/info.png) no-repeat scroll 0px center;
 }
+
 .notice {
 background:#EEEEFF url(../images/info.png) no-repeat scroll 0px center;
 }
