--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -60,86 +60,98 @@
 
 <body style="font-size:${tg.session.get('fontsize',tg.config['vigiboard_font.size'])}">
 
-<table class="table_top" summary="Toolbar">
-    <tr>
-        <td>
-            <a py:if="tg.config.get('vigiboard_links.logo')" href="${tg.config['vigiboard_links.logo']}"><img alt="" src="${tg.url('/images/vigilo.png')}" style="width:58px;"/></a>
-            <a py:if="not tg.config.get('vigiboard_links.logo')" href="${tg.url('/')}"><img alt="" src="${tg.url('/images/vigilo.png')}" style="width:58px;"/></a>
-            ${l_('v%(vigilo_version)s' % {'vigilo_version': tg.config['vigilo_version']})}
-        </td>
+<div class="toolbar">
 
-        <td style="margin-left: 30px; float: right">
-            <a href="${tg.url('/')}">
-                <img src="${tg.url('/images/home.png')}" alt="Home" title="Home" />
-            </a>
-            <a id="SearchLien" href="javascript:window.search_dialog.open.bind(window.search_dialog)();">
-                <img src="${tg.url('/images/search.png')}" alt="Filter display" title="Filter display"/>
-            </a>
-            <a href="${tg.url('/logout_handler')}">
-                <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
-            </a>
-        </td>
+    <div class="toolbar_item">
+        <a href="${tg.url('/')}">
+            <img src="${tg.url('/images/home.png')}" alt="Home" title="Home" />
+        </a>
+        <a id="SearchLien" href="javascript:window.search_dialog.open.bind(window.search_dialog)();">
+            <img src="${tg.url('/images/search.png')}" alt="Filter display" title="Filter display"/>
+        </a>
+        <a href="${tg.url('/logout_handler')}">
+            <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
+        </a>
+    </div>
 
-        <td style="margin-left: 30px; margin-top: 4px; float: right">
-            <a href="javascript:change_fontsize('5px')"><img alt="Default font size" title="Default font size" src="${tg.url('/images/icn_text_sm.png')}" /></a>
-            <a href="javascript:change_fontsize('10px')"><img alt="Medium font size" title="Medium font size" src="${tg.url('/images/icn_text_md.png')}" /></a>
-            <a href="javascript:change_fontsize('25px')"><img alt="Large font size" title="Large font size" src="${tg.url('/images/icn_text_lg.png')}" /></a>
-        </td>
+    <div class="toolbar_item" id="font_size_selector">
+        <a href="javascript:change_fontsize('5px')">
+            <img alt="Default font size" title="Default font size" src="${tg.url('/images/icn_text_sm.png')}" />
+        </a>
+        <a href="javascript:change_fontsize('10px')">
+            <img alt="Medium font size" title="Medium font size" src="${tg.url('/images/icn_text_md.png')}" />
+        </a>
+        <a href="javascript:change_fontsize('25px')">
+            <img alt="Large font size" title="Large font size" src="${tg.url('/images/icn_text_lg.png')}" />
+        </a>
+    </div>
 
-        <td style="margin-left: 30px; float: right">
-            Refresh every
-            <select id="refresh_time" class="toolbar_select" onchange="change_refresh($('refresh_time').get('value'));">
-                <py:for each="(delay, label) in refresh_times"
-                    py:with="refresh_time = tg.session.get('refresh', 0)">
-                <option py:if="refresh_time == delay" value="${delay}" selected="selected">${label}</option>
-                <option py:if="refresh_time != delay" value="${delay}">${label}</option>
-                </py:for>
-            </select>
-        </td>
+    <div class="toolbar_item">
+        Refresh every
+        <select id="refresh_time" class="toolbar_select" onchange="change_refresh($('refresh_time').get('value'));">
+            <py:for each="(delay, label) in refresh_times"
+                py:with="refresh_time = tg.session.get('refresh', 0)">
+            <option py:if="refresh_time == delay" value="${delay}" selected="selected">${label}</option>
+            <option py:if="refresh_time != delay" value="${delay}">${label}</option>
+            </py:for>
+        </select>
+    </div>
 
-        <td style="margin-left: 30px; float: right">
-            Theme
-            <select id="theme" class="toolbar_select"
-                onchange="change_theme($('theme').get('value'), $('theme').getSelected().get('text'));">
-                <py:for each="(theme_name, theme_id, theme_files) in themes"
-                    py:choose="int(theme_id == active_theme)">
-                <option py:when="1" value="${theme_id}" selected="selected">${theme_name}</option>
-                <option py:otherwise="" value="${theme_id}">${theme_name}</option>
-                </py:for>
-            </select>
-        </td>
+    <div class="toolbar_item">
+        Theme
+        <select id="theme" class="toolbar_select"
+            onchange="change_theme($('theme').get('value'), $('theme').getSelected().get('text'));">
+            <py:for each="(theme_name, theme_id, theme_files) in themes"
+                py:choose="int(theme_id == active_theme)">
+            <option py:when="1" value="${theme_id}" selected="selected">${theme_name}</option>
+            <option py:otherwise="" value="${theme_id}">${theme_name}</option>
+            </py:for>
+        </select>
+    </div>
 
-        <td style="margin-top: 8px; float: right">
-            <span py:if="filter(None, search.values())" style="color: rgb(70, 130, 180)">
-                <a href="${tg.url('/')}" style="color:rgb(70, 130, 180); text-decoration: underline;">${l_('You are in Search mode, click here to return to the initial mode.')}</a>
-            </span>
-        </td>
-    </tr>
-</table>
+    <div class="toolbar_item" id="search_mode_tip">
+        <span py:if="filter(None, search.values())">
+            <a href="${tg.url('/')}">${l_('You are in Search mode, click here to return to the initial mode.')}</a>
+        </span>
+    </div>
+    
+    <div id="logo">
+        <a py:if="tg.config.get('vigiboard_links.logo')" href="${tg.config['vigiboard_links.logo']}">
+            <img alt="" src="${tg.url('/images/vigilo.png')}"/>
+        </a>
+        <a py:if="not tg.config.get('vigiboard_links.logo')" href="${tg.url('/')}">
+            <img alt="" src="${tg.url('/images/vigilo.png')}"/>
+        </a>
+        ${l_('v%(vigilo_version)s' % {'vigilo_version': tg.config['vigilo_version']})}
+    </div>
+</div>
 
 <py:with vars="flash=tg.flash_obj.render('flash', use_js=False)">
-<div py:strip="True" py:if="flash" py:content="XML(flash)" />
+    <div py:strip="True" py:if="flash" py:content="XML(flash)" />
 </py:with>
 
 <div style="display: none">
-${tmpl_context.search_form()}
+    ${tmpl_context.search_form()}
 </div>
 
 <div class="main_content">
     ${event_table(events,page,nb_pages,rows_info,event_edit_status_options,history,hist_error,search)}
 </div>
+
+
 <script type="text/javascript">
 /*<![CDATA[*/
     window.search_dialog = null;
 
     window.dlg_open_handler = function () { this.isOpen = true; }
     window.dlg_close_handler = function () { this.isOpen = false; }
-
-    window.addEvent('domready', function (){
+    window.addEvent('load', function (){
         var flash = $('flash');
         if (flash) {
-            flash.fade('in').pauseFx(5000).fade('out');
+            flash.fade('in').pauseFx(10000).fade('out');
         }
+    });
+    window.addEvent('domready', function (){
 
         /**
          * HACK: le closed: True est nécessaire pour éviter que
