--- a/src/vigilo/themes/templates/vigigraph/graphslist.html
+++ b/src/vigilo/themes/templates/vigigraph/graphslist.html
@@ -1,7 +1,8 @@
 <div xmlns:py="http://genshi.edgewall.org/">
     <ul class="graphslist">
         <li py:for="graph in graphslist">
-            <img src="${graph}" border="0" alt=""></img>
+            <p>${graph['title']}</p>
+            <img src="${graph['src']}" border="0" alt=""></img>
         </li>
     </ul>
 </div>
