--- a/src/vigilo/themes/templates/vigimap/index.html
+++ b/src/vigilo/themes/templates/vigimap/index.html
@@ -34,7 +34,7 @@
     <script type="text/javascript" src="js/selectmapgroup.js"></script>
     <script type="text/javascript" src="js/fieldautocomplete.js"></script>
     <script type="text/javascript" src="js/tg_submit.js"></script>
-    <!-- Ceci est un commentaire
+    <!--! Les lignes suivantes sont générées automatiquement par les fonctions empty-dynform et emptu-calendar
     <script type="text/javascript" src="/toscawidgets/resources/tw.dynforms.widgets/static/dynforms.js"></script>
     <script type="text/javascript" src="/toscawidgets/resources/tw.forms/static/calendar/calendar.js"></script>
     <script type="text/javascript" src="/toscawidgets/resources/tw.forms/static/calendar/calendar-setup.js"></script>
@@ -62,12 +62,12 @@
         <canvas>
             Your browser does not support the canvas element. Please upgrade.
         </canvas>
-        <!-- début à retirer
+        <!--! début à retirer
         <button id="test_fonction">Test function</button>
         <button id="test_fonction2">Test function2</button>
         <button id="test_fonction3">Test function3</button>
-        -->
-        <!-- fin a retirer-->
+        fin a retirer-->
+        
         <div id="legend">
         </div>
     </div>
@@ -83,14 +83,12 @@
     <div id="loading">
         <img alt="loading..." src="images/loading.gif" />
     </div>
+    <!--! L'apppel des deux fonctions suivantes (empty...) provoque l'injection dans la page html,
+            des scripts javascript nécessaires à l'utilisation des toscawidgets dynforms dans une
+            boîte de dialogue, elles n'ont en revanche aucune influence au niveau de
+            l'apparence de la page html-->
     ${empty_dynform()}
     ${empty_calendar()}
-    <!--! Ceci est un commentaire
-    <div xmlns:py="http://genshi.edgewall.org/">
-    <h1> !</h1>
-    ${empty_dynform()}
-    </div>
-    -->
     
 
 </body>
