Amélioration de la présentation du dialogue de détails d'un évènement corrélé. Amélioration de la présentation du dialogue listant les services de haut niveau impactés.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1734 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/common.css
+++ b/src/vigilo/themes/public/vigiboard/css/common.css
@@ -225,3 +225,40 @@ div.clearingdiv {
     font-size: 12px;
 }
 
+/* Dialogue de détails */
+
+#DetailsDialog {
+    padding: 5px;
+}
+
+#DetailsDialog hr {
+    margin: 10px 5px;
+}
+
+#DetailsDialog #state_info {
+    padding-top: 1px;
+    padding-left: 10px;
+}
+
+    #DetailsDialog #state_info div.value{
+        float: right;
+        padding-right: 10px;
+    }
+
+#DetailsDialog #history_links {
+    padding-top: 1px;
+    padding-left: 10px;
+}
+
+#DetailsDialog #external_links {
+    padding-top: 1px;
+    padding-left: 10px;
+}
+
+#DetailsDialog a:hover{
+    text-decoration: underline;
+}
+
+
+
+
