Déplacement du code CSS des plugins de vigiboard dans des fichiers séparés.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1745 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -56,6 +56,10 @@
         <link py:otherwise="" py:for="theme_file in theme_files" type="text/css"
             rel="alternate stylesheet" href="${tg.url(theme_file)}" title="${theme_name}" />
     </py:for>
+
+    <py:for each="fct,tpl in plugin_context">
+        <link rel="stylesheet" type="text/css" href="${tg.url('/css/vigiboard_plugin/' + tpl + '.css')}" />
+    </py:for>
 </head>
 
 <body style="font-size:${tg.session.get('fontsize',tg.config['vigiboard_font.size'])}">
