Impression graphe - ajout periode
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1859 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigigraph/graphslist.html
+++ b/src/vigilo/themes/templates/vigigraph/graphslist.html
@@ -2,6 +2,7 @@
     <ul class="graphslist">
         <li py:for="graph in graphslist">
             <p>${graph['title']}</p>
+            <p>${l_("Période du ")} ${graph['sts']} ${l_("au")} ${graph['ets']}</p>
             <img src="${graph['src']}" border="0" alt=""></img>
         </li>
     </ul>
