--- a/src/vigilo/themes/templates/vigigraph/graphslist.html
+++ b/src/vigilo/themes/templates/vigigraph/graphslist.html
@@ -1,7 +1,8 @@
 <div xmlns:py="http://genshi.edgewall.org/">
     <ul class="graphslist">
+        <h1>Vigigraph</h1>
         <li py:for="graph in graphslist">
-            <p>${graph['title']}</p>
+            <h2>${graph['title']}</h2>
             <p>${l_("Période du ")} ${graph['sts']} ${l_("au")} ${graph['ets']}</p>
             <img src="${graph['src']}" border="0" alt=""></img>
         </li>
