Remplacement des fichiers de configuration Python (settings.py) en fichiers INI (settings.ini), resp. pour les settings de test. Correction des dépendances entre les composants (vigiboard -> vigilo.turbogears -> vigilo.models) et sur les bibliothèques. Réintégration de la configuration de SQLAlchemy dans les fichiers INI de Turbogears. Mise à jour de la configuration du corrélateur à titre d'exemple. La manière de configurer les loggers a RADICALEMENT changée !! Lisez les settings du corrélateur pour un exemple.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1866 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/shn.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/shn.html
@@ -2,12 +2,6 @@
       xmlns:xi="http://www.w3.org/2001/XInclude"
       py:strip="">
 
-<style>
-    #hls_dialog ul#impacted_hls_list{
-        padding: 10px;
-    }
-</style>
-
 <script type="text/javascript">
 /*<![CDATA[*/
     window.addEvent('domready', function () {
@@ -32,7 +26,7 @@
                 var code = '<ul id="impacted_hls_list">';
                 for (var i = 0; i < json.services.length; i++)
                     code += '<li>' + json.services[i] + '<\/li>';
-                code += '</ul>';
+                code += '<\/ul>';
                 window.hls_dialog.setContent(code);
                 window.hls_dialog.open.bind(window.hls_dialog)();
             }
