--- a/src/vigilo/themes/templates/vigicore/profile.html
+++ b/src/vigilo/themes/templates/vigicore/profile.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<py:if test="not settings.get('USE_KERBEROS', False)">
+<py:if test="not config.get('use_kerberos', False)">
 <div id="loginform">
 <form action="${tg.url('/profile/update')}" method="post" class="loginfields">
     <h2><span>Change password</span></h2>
